--- a/lesson_2/style.css
+++ b/lesson_2/style.css
@@ -1,8 +1,10 @@
 body {
-    padding-top: 80px;
     max-width: 659px;
     margin: 0 auto; 
     font-family: sans-serif;
+}
+.title {
+    margin-top: 80px;
 }
 h1 {
     font-family: serif;
